[tool.poetry]
name = "fxhToolBox"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pysimplegui = "^4.18.2"
you-get = "^0.4.1432"
pywifi = "^1.1.12"
pyzbar = "^0.1.8"
numpy = "^1.18.4"
opencv-python = "^4.2.0"
pillow = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
